# op-sys

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lab1/: CMakeLists.txt
lab1/compiler_optimization/: CMakeLists.txt  fib.c  insertion.c  mallocs.c
lab1/ex1/: CMakeLists.txt  Makefile  documentation.txt  fib.c  insertion.c  mallocs.c  string_to_list.c  utils.c
lab1/ex2/: CMakeLists.txt  Makefile  documentation.txt  dynamic_check.c  shared_check.c  sort_library.c  static_check.c
lab1/libraries/: CMakeLists.txt  dynamic_check.c
lab1_mem_mgmt_and_libs/compiler_optimization/: Makefile
lab1_mem_mgmt_and_libs/libraries/: documentation.txt  shared_check.c  sort_library.h  utils.c
lab2/: CMakeLists.txt
lab2/ex1/: CMakeLists.txt  program.c  wyniki.txt
lab2/ex2/: CMakeLists.txt  Makefile  search_nftw.c  search_stat.c  utils.c
lab2/search_dir/: CMakeLists.txt
lab2/system_vs_lib_io/: CMakeLists.txt  Makefile  program.c  utils.c
lab2_file_system/search_dir/: search_nftw.c  search_stat.c
lab2_file_system/system_vs_lib_io/: CMakeLists.txt  wyniki.txt
lab3/: CMakeLists.txt
lab3/ex1/: CMakeLists.txt  Makefile  search_proc.c
lab3/ex2/: CMakeLists.txt  cmd_interpreter.c  input.txt
lab3/search_dir_mult_ps/: CMakeLists.txt  search_proc.c
lab3_processes/batch_job_interpreter/: CMakeLists.txt  Makefile  cmd_interpreter.c
lab3_processes/search_dir_mult_ps/: search_proc.c  utils.c
lab4_signals_and_pipes/: CMakeLists.txt
lab5_message_queues/: CMakeLists.txt
lab6_semaphores_shared_mem/: CMakeLists.txt
lab7_synch_threads/: CMakeLists.txt
(+42 files in other folders)
