cmake_minimum_required(VERSION 3.15)
project(op-sys C)
set(CMAKE_C_STANDARD 11)

add_subdirectory(lab1_mem_mgmt_and_libs)
add_subdirectory(lab2_file_system)
add_subdirectory(lab3_processes)
add_subdirectory(lab4_signals_and_pipes)
add_subdirectory(lab5_message_queues)
add_subdirectory(lab6_semaphores_shared_mem)